k8s/was-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-deployment
  labels:
    app: petclinic
spec:
#  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: 010068699561.dkr.ecr.ap-northeast-2.amazonaws.com/petclinic:v31-20251113-025343
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /petclinic/
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /petclinic/
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
